--- a/index.html
+++ b/index.html
@@ -410,17 +410,23 @@
                 </div>
             </div>
         </div> -->
+
+
 <div class="bg-white shadow-md p-4">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold text-gray-800">Job Portal</h1>
-            <div class="flex items-center gap-4">
-                <label class="flex items-center gap-2 cursor-pointer">
-                    <span class="text-sm text-gray-600">Admin Mode</span>
-                    <input type="checkbox" id="adminToggle" class="w-5 h-5 cursor-pointer">
-                </label>
-            </div>
+                                    <div id="adminToggleContainer" class="flex items-center gap-4" style="display:none;">
+                                             <label class="flex items-center gap-2 cursor-pointer">
+                                                  <span class="text-sm text-gray-600">Admin Mode</span>
+                                                  <input type="checkbox" id="adminToggle" class="w-5 h-5 cursor-pointer">
+                                              </label>
+                                    </div>
+
         </div>
     </div>
+
+
+
+
 
     <div id="jobs" class="section">
         <div class="max-w-7xl mx-auto px-4 py-8">
@@ -817,7 +823,7 @@
   </div>
 </div>
 
-        <!-- Admin Section -->
+        <!-- Admin Section - Hidden by default -->
         <div id="admin" class="section hidden">
             <div class="max-w-7xl mx-auto px-4 py-8">
                 <div id="adminPanel">
@@ -1053,6 +1059,7 @@
 </body>
 <script src="script.js" ></script>
 <script src="script2.js" ></script>
+<script src="admin.js" ></script>
 
 
 </html>
