--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
         <div id="admin" class="section hidden">
             <div class="max-w-7xl mx-auto px-4 py-8">
                 <div id="adminPanel">
-                    <h2 class="text-3xl font-bold text-gray-800 mb-8">Admin Dashboard</h2>
+                    <h2 class="text-3xl font-bold text-gray-800 mb-8">Create With Stats</h2>
                     
                     <div class="grid md:grid-cols-4 gap-8 mb-8">
                         <div class="bg-white bg-opacity-90 p-6 rounded-lg shadow-lg text-center">
@@ -835,15 +835,15 @@
                             <p class="text-gray-600">Total Students</p>
                         </div>
                         <div class="bg-white bg-opacity-90 p-6 rounded-lg shadow-lg text-center">
-                            <h3 class="text-2xl font-bold text-green-600" id="totalCourses">15</h3>
+                            <h3 class="text-2xl font-bold text-green-600" id="totalCourses">3</h3>
                             <p class="text-gray-600">Active Courses</p>
                         </div>
                         <div class="bg-white bg-opacity-90 p-6 rounded-lg shadow-lg text-center">
-                            <h3 class="text-2xl font-bold text-purple-600" id="totalVideos">342</h3>
+                            <h3 class="text-2xl font-bold text-purple-600" id="totalVideos">9</h3>
                             <p class="text-gray-600">Video Lessons</p>
                         </div>
                         <div class="bg-white bg-opacity-90 p-6 rounded-lg shadow-lg text-center">
-                            <h3 class="text-2xl font-bold text-orange-600" id="totalBackgrounds">5</h3>
+                            <h3 class="text-2xl font-bold text-orange-600" id="totalBackgrounds">2</h3>
                             <p class="text-gray-600">Background Images</p>
                         </div>
                     </div>
